<resources>
    <string name="app_name">昭通水果售卖助手</string>
    <string name="title">这是个列表</string>
    <string name="user_name">用户名</string>
    <string name="user_age">用户年龄</string>
    <string name="title_common_back">返回</string>
    <string name="title_common_insert">增加数据</string>
    <string name="menu_add">增加</string>

    <string name="activity_main_user_phone">用户手机</string>

    <string name="activity_add_user_name">添加用户名</string>
    <string name="activity_add_user_phone">添加电话号码</string>
    <string name="activity_add_user_address">添加详细地址</string>
    <string name="activity_add_user_info">添加用户信息到数据库</string>

    <string name="activity_add_user_address_info">地址不能为空</string>
    <string name="activity_add_user_username_info">用户名不能为空</string>
    <string name="activity_add_user_phone_info">手机号码不能为空</string>
    <string name="activity_add_user_phone_wrong">手机号码不正确</string>

    <string name="activity_add_user_success">添加用户信息成功</string>
    <string name="activity_add_user_fail">添加用户信息失败</string>
    <string name="activity_add_user_exist">此用户信息已经存在</string>

    <string name="pager_page_count">共有 %1$d 页</string>
    <string name="pager_total_count">共有 %1$d 条数据</string>
    <string name="pager_current_page">第 %1$d 页</string>
    <string name="pager_no_more">没有更多数据</string>
    <string name="menu_main_home">主页菜单</string>
    <string name="menu_main_about">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_specification">SpecificationActivity</string>
    <string name="add_order_info_buyer">选择购买人</string>
    <string name="add_order_info_introducer">选择介绍人</string>
    <string name="add_order_info_specification">选择规格</string>
    <string name="add_order_info_sell_price">出售价</string>

    <string name="activity_add_specification_description">添加苹果尺寸范围（80mm-90mm）</string>
    <string name="activity_add_specification_type">添加苹果类型(大果，小果等,填0,1,2,3,4)</string>
    <string name="activity_add_specification_weight">添加苹果重量(斤)</string>
    <string name="activity_add_specification_price">苹果价格</string>

    <string name="activity_add_specification_price_hint">苹果价格不能为空</string>
    <string name="activity_add_specification_type_hint">苹果类型不能为空</string>
    <string name="activity_add_specification_weight_hint">苹果重量不能为空</string>
    <string name="activity_add_specification_description_hint">苹果描述不能为空</string>


</resources>
