<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/green"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_pager_page_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pager_page_count"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pager_total_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_pager_current_page"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/tv_pager_total_count"
        app:layout_constraintTop_toTopOf="@+id/tv_pager_total_count"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/tv_pager_total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pager_total_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_pager_page_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476"/>

    <TextView
        android:id="@+id/tv_pager_current_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pager_current_page"
        app:layout_constraintBottom_toBottomOf="@+id/tv_pager_page_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_pager_page_count"
        app:layout_constraintTop_toTopOf="@+id/tv_pager_page_count"/>
</android.support.constraint.ConstraintLayout>